--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,16 +4,19 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
-            <h2 class="topic-authpr">
+            <h2 class="topic-author">
               <%= topic.user.name %>
             </h2>
             <%= image_tag topic.image.url %>
             <% if !topic.favorite_users.include?(current_user) %>
-              <%= link_to favorites_path(topic_id: topic.id), method:post do %>
-                <%= image_tag "icons/heart-black.png", class: "topic-index-icon" %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+                <i class="far fa-heart like-btn" ></i>
               <% end %>
+            <% else %>
+              <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+                <i class="fas fa-heart unlike-btn"></i>
+              <% end %>  
             <% end %>
-            <%= image_tag "icons/comment.png", class: "topic-index-icon" %>
             <p class="topic-text">
               <%= topic.description %>
             </p>
